2008-02-17  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (main): Patch from Riccardo Lucchese
	to set up the recent files list later on in startup.
	(Helps: #514087)

2008-02-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer-constants.h:
	* browser-plugin/totempluginviewer-marshal.list:
	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_class_init), (totem_embedded_save_volume),
	(totem_embedded_stop), (totem_embedded_set_volume),
	(totem_embedded_set_fullscreen),
	(totem_embedded_toggle_fullscreen), (cb_vol), (on_tick),
	(totem_embedded_action_volume_relative),
	(totem_embedded_construct):
	Implement a property change signal when fullscreen state
	or volume changes

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: As above and implement
	SetFullscreen()

	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemGMPSettings.cpp:
	* browser-plugin/totemGMPSettings.h:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	Fix for changes above

	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	Implement ToggleFullscreen/ToggleMute, state, mute,
	volume and fullscreen properties

	(Closes: #462544)

2008-02-15  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size):
	  Fix "gst_value_set_fraction: assertion `denominator != 0' failed"
	  warning in case we don't have width/height yet (Closes: #516653)

2008-02-15  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Add proper locking to the
	entry list, hopefully stopping any potential races.

2008-02-15  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Fix YouTube searches which
	produce no results. (Closes: #516236)

2008-02-14  Bastien Nocera  <hadess@hadess.net>
